--- a/.github/workflows/cidak-workflow.yml
+++ b/.github/workflows/cidak-workflow.yml
@@ -1,4 +1,4 @@
-name: Deploy static site to GitHub Pages
+name: Deploy React App to GitHub Pages
 
 on:
   push:
@@ -15,23 +15,30 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Ensure CNAME is present
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build React app
+        run: npm run build   
+
       - name: Add CNAME file
-        run: echo "cidak.co" > ./public/CNAME
+        run: echo "cidak.co" > build/CNAME
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./public
+          path: build
 
       - name: Deploy to GitHub Pages
         id: deployment
